[gd_scene load_steps=84 format=2]

[ext_resource path="res://gui/sound_settings/sfx.gd" type="Script" id=1]
[ext_resource path="res://world/interactable_objects/juke_a_box/juke_a_box.gd" type="Script" id=2]
[ext_resource path="res://world/lights/light.png" type="Texture" id=3]
[ext_resource path="res://world/interactable_objects/juke_a_box/juke_a_box_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://world/interactable_objects/juke_a_box/sounds/mr_sandman_music.wav" type="AudioStream" id=5]
[ext_resource path="res://player/sfx/not_enough_money.wav" type="AudioStream" id=6]
[ext_resource path="res://world/interactable_objects/juke_a_box/sounds/crazy_jukebox_music.wav" type="AudioStream" id=7]
[ext_resource path="res://world/interactable_objects/juke_a_box/sounds/only_you_music.wav" type="AudioStream" id=8]
[ext_resource path="res://world/interactable_objects/juke_a_box/sounds/electrical_humming_50hz.wav" type="AudioStream" id=9]
[ext_resource path="res://world/lights/light_bulb/lightbulb_broken.gd" type="Script" id=10]
[ext_resource path="res://player/weapons/m4a1/m4a1.png" type="Texture" id=11]
[ext_resource path="res://world/interactable_objects/juke_a_box/juke_a_box_processing_spritesheet.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 12 )
region = Rect2( 233, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 12 )
region = Rect2( 466, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 12 )
region = Rect2( 699, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 12 )
region = Rect2( 932, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 12 )
region = Rect2( 1165, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 1398, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 1631, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 1864, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 12 )
region = Rect2( 2097, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 12 )
region = Rect2( 2330, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 12 )
region = Rect2( 2563, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 12 )
region = Rect2( 2796, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 12 )
region = Rect2( 3029, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 12 )
region = Rect2( 3262, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 12 )
region = Rect2( 3495, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 12 )
region = Rect2( 3728, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 12 )
region = Rect2( 3961, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 12 )
region = Rect2( 4194, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 12 )
region = Rect2( 4427, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 12 )
region = Rect2( 4660, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 12 )
region = Rect2( 4893, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 12 )
region = Rect2( 5126, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 12 )
region = Rect2( 5359, 0, 233, 240 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 233, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 466, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 699, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 932, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 1165, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 1398, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 1631, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 1864, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 2097, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 2330, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 2563, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 2796, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 3029, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 3262, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 3495, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 3728, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 3961, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 4194, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 4427, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 4660, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 4893, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 5126, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 5359, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 5592, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 5825, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 6058, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 6291, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 6524, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 6757, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 6990, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 7223, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 7456, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 7689, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 7922, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 8155, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 8388, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 8621, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 8854, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 4 )
region = Rect2( 9087, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 4 )
region = Rect2( 9320, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 4 )
region = Rect2( 9553, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 4 )
region = Rect2( 9786, 0, 233, 240 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 4 )
region = Rect2( 10019, 0, 233, 240 )

[sub_resource type="SpriteFrames" id=70]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=71]
extents = Vector2( 100, 120 )

[node name="puck_a_panch" type="Node2D"]
z_index = -5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -40 )
z_index = 5
texture = ExtResource( 11 )

[node name="Light2D2" type="Light2D" parent="."]
visible = false
position = Vector2( 0, -40 )
texture = ExtResource( 3 )
color = Color( 1, 0.819608, 0, 1 )

[node name="AnimatedSpriteProcessing" type="AnimatedSprite" parent="."]
frames = SubResource( 25 )
frame = 13
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 70 )
frame = 28
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 0.44545 )
texture = ExtResource( 3 )
script = ExtResource( 10 )

[node name="buyarea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="buyarea"]
shape = SubResource( 71 )

[node name="sfx" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="buy" type="Node2D" parent="sfx"]

[node name="BuySound" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 5 )
volume_db = 1.0
bus = "Music"

[node name="BuySound2" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 8 )
volume_db = 1.0
bus = "Music"

[node name="BuySound3" type="AudioStreamPlayer2D" parent="sfx/buy"]
stream = ExtResource( 7 )
volume_db = 1.0
bus = "Music"

[node name="not_enough_money" type="Node2D" parent="sfx"]

[node name="notenoughmoney" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 6 )
volume_db = 2.0
bus = "Soundeffects"

[node name="notenoughmoney2" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 6 )
volume_db = 2.0
pitch_scale = 0.98
bus = "Soundeffects"

[node name="notenoughmoney3" type="AudioStreamPlayer2D" parent="sfx/not_enough_money"]
stream = ExtResource( 6 )
volume_db = 2.0
pitch_scale = 1.03
bus = "Soundeffects"

[node name="Ambientsound" type="Node2D" parent="sfx"]

[node name="ElectricalHumming" type="AudioStreamPlayer2D" parent="sfx/Ambientsound"]
stream = ExtResource( 9 )
volume_db = 1.0
autoplay = true
max_distance = 500.0
bus = "Soundeffects"

[node name="Timer_buy_wait_time" type="Timer" parent="."]

[connection signal="play_sound" from="." to="sfx" method="_on_puck_a_panch_play_sound"]
[connection signal="timeout" from="Timer" to="Light2D" method="_on_Timer_timeout"]
[connection signal="body_entered" from="buyarea" to="." method="_on_buyarea_body_entered"]
[connection signal="body_exited" from="buyarea" to="." method="_on_buyarea_body_exited"]
[connection signal="timeout" from="Timer_buy_wait_time" to="." method="_on_Timer_buy_wait_time_timeout"]
